--- a/Crumble/Crumble.vcxproj
+++ b/Crumble/Crumble.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="src\Crumble\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Crumble\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Crumble\Renderer\Renderer.h" />
+    <ClInclude Include="src\Crumble\Renderer\Renderer2D.h" />
     <ClInclude Include="src\Crumble\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Crumble\Renderer\Shader.h" />
     <ClInclude Include="src\Crumble\Renderer\Texture.h" />
@@ -556,6 +557,7 @@
     <ClCompile Include="src\Crumble\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Crumble\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Crumble\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Crumble\Renderer\Renderer2D.cpp" />
     <ClCompile Include="src\Crumble\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Crumble\Renderer\Shader.cpp" />
     <ClCompile Include="src\Crumble\Renderer\Texture.cpp" />
