--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -135,11 +135,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Random.h" />
     <ClInclude Include="src\Sandbox2D.h" />
+    <ClInclude Include="src\TileMap.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Random.cpp" />
     <ClCompile Include="src\Sandbox2D.cpp" />
     <ClCompile Include="src\SandboxApp.cpp" />
+    <ClCompile Include="src\TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Crumble\Crumble.vcxproj">
