--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,8 +15,15 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=974,649
+ViewportPos=1101,1231
+ViewportId=0x1C33C293
 Size=297,57
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+ViewportPos=1888,394
+ViewportId=0xE927CF2F
+Size=550,680
 Collapsed=0
 
 [Docking][Data]
