--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -135,12 +135,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Random.h" />
+    <ClInclude Include="src\CardsLayer.h" />
+    <ClInclude Include="src\GameLayer.h" />
+    <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\Random.h" />
     <ClInclude Include="src\Sandbox2D.h" />
     <ClInclude Include="src\TileMap.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Random.cpp" />
+    <ClCompile Include="src\CardsLayer.cpp" />
+    <ClCompile Include="src\GameLayer.cpp" />
+    <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Random.cpp" />
     <ClCompile Include="src\Sandbox2D.cpp" />
     <ClCompile Include="src\SandboxApp.cpp" />
     <ClCompile Include="src\TileMap.cpp" />
