--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\CardsLayer.h" />
+    <ClInclude Include="src\CrossPoint.h" />
     <ClInclude Include="src\GameLayer.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Random.h" />
